Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8233416

JFR: assert((((((klass)->trace_id()) & (((1 << 1) << 8) | (JfrTraceIdEpoch::in_use_this_epoch_bit()))) != 0))) failed: invariant

XMLWordPrintable

    • jfr
    • b23

      Stress test hit assertion:
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/jfr/recorder/checkpoint/types/traceid/jfrTraceId.inline.hpp:64), pid=20039, tid=20128
      # assert((((((klass)->trace_id()) & (((1 << 1) << 8) | (JfrTraceIdEpoch::in_use_this_epoch_bit()))) != 0))) failed: invariant
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+22) (fastdebug build 14-ea+22-937)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+22-937, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xcedaac] YoungGCTracer::send_promotion_in_new_plab_event(Klass*, unsigned long, unsigned int, bool, unsigned long) const+0x88c
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S2213/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/99ac2f3f-763d-4f03-ab28-ec63f70978a3/runs/681c9fd2-bc97-4c5f-9238-83ade054435b/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/core.20039)
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=6 -Xcomp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -XX:-DoEscapeAnalysis -XX:MaxRAMPercentage=50 -XX:MaxMetaspaceSize=256m -XX:+HeapDumpOnOutOfMemoryError -XX:+CrashOnOutOfMemoryError -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener --add-exports=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S2213/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/99ac2f3f-763d-4f03-ab28-ec63f70978a3/runs/681c9fd2-bc97-4c5f-9238-83ade054435b/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/java.io.tmpdir -Duser.home=/opt/mach5/mesos/work_dir/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S2213/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/99ac2f3f-763d-4f03-ab28-ec63f70978a3/runs/681c9fd2-bc97-4c5f-9238-83ade054435b/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/user.home -agentpath:/opt/mach5/mesos/work_dir/jib-master/install/jdk-14+22-937/linux-x64-debug.test/hotspot/jtreg/native/libJvmtiStressModule.so -XX:NativeMemoryTracking=detail applications.kitchensink.process.stress.Main /opt/mach5/mesos/work_dir/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S2213/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/99ac2f3f-763d-4f03-ab28-ec63f70978a3/runs/681c9fd2-bc97-4c5f-9238-83ade054435b/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/kitchensink.final.properties

      Host: Intel(R) Xeon(R) Platinum 8167M CPU @ 2.00GHz, 8 cores, 58G, Oracle Linux Server release 7.6
      Time: Fri Nov 1 17:12:58 2019 UTC elapsed time: 1179 seconds (0d 0h 19m 39s)

      --------------- T H R E A D ---------------

      Current thread (0x00007f102800d000): GCTaskThread "GC Thread#2" [stack: 0x00007f102d5dd000,0x00007f102d6dd000] [id=20128]

      Stack: [0x00007f102d5dd000,0x00007f102d6dd000], sp=0x00007f102d6db750, free space=1017k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xcedaac] YoungGCTracer::send_promotion_in_new_plab_event(Klass*, unsigned long, unsigned int, bool, unsigned long) const+0x88c
      V [libjvm.so+0xc9a9df] G1ParScanThreadState::report_promotion_event(G1HeapRegionAttr, oop, unsigned long, unsigned int, HeapWordImpl**) const+0xef
      V [libjvm.so+0xc9c053] G1ParScanThreadState::copy_to_survivor_space(G1HeapRegionAttr, oop, markWord)+0x683
      V [libjvm.so+0xc2ffed] void G1ParScanThreadState::do_oop_evac<unsigned int>(unsigned int*)+0xcd
      V [libjvm.so+0xc9c7b9] G1ParScanThreadState::trim_queue()+0x149
      V [libjvm.so+0xc292b8] G1ParEvacuateFollowersClosure::do_void()+0x68
      V [libjvm.so+0x1531821] ReferenceProcessor::process_final_keep_alive_work(DiscoveredList&, OopClosure*, VoidClosure*) [clone .constprop.86]+0x2e1
      V [libjvm.so+0x153c13e] RefProcPhase3Task::work(unsigned int, BoolObjectClosure&, OopClosure&, VoidClosure&)+0x4e
      V [libjvm.so+0xc2a9c2] G1STWRefProcTaskProxy::work(unsigned int)+0x182
      V [libjvm.so+0x1842524] GangWorker::run_task(WorkData)+0x84
      V [libjvm.so+0x1842668] GangWorker::loop()+0x48
      V [libjvm.so+0x1713836] Thread::call_run()+0xf6
      V [libjvm.so+0x143489e] thread_native_entry(Thread*)+0x10e

            mgronlun Markus Grönlund
            lmesnik Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: