src/hotspot/share/jfr/recorder/checkpoint/types/traceid/jfrTraceIdBits.inline.hpp
@@ -40,10 +40,8 @@ static const int meta_offset = low_offset - 1;
 
 inline void set_bits(jbyte bits, jbyte volatile* const dest) {
   assert(dest != NULL, "invariant");
-  if (bits != (*dest & bits)) {
-    *dest |= bits;
-    OrderAccess::storestore();
-  }
+  *dest |= bits;
+  OrderAccess::storestore();
 }
 
 inline jbyte traceid_and(jbyte current, jbyte bits) {
